syntax = "proto3";
package iroha.protocol;

import "primitive.proto";

message GetAccount {
  string account_id = 1;
}

message GetSignatories {
  string account_id = 1;
}

message GetAccountTransactions {
  string account_id = 1;
}

message GetAccountAssetTransactions {
  string account_id = 1;
  string asset_id = 2;
}

message GetAccountAssets {
  string account_id = 1;
  string asset_id = 2;
}

message Query {
  message Header {
    uint64 created_time = 1;
    Signature signature = 2;
  }

  Header header = 1;
  string creator_account_id = 2;

  oneof query {
    GetAccount get_account = 3;
    GetSignatories get_account_signatories = 4;
    GetAccountTransactions get_account_transactions = 5;
    GetAccountAssets get_account_assets = 6;
  }
}
